this is a new file

--- a/rosa-me.html
+++ b/rosa-me.html
@@ -5,7 +5,7 @@
 </head>
 	<h1>Student Bio</h1>
 <br>
-<img src="https://upload.wikimedia.org/wikipedia/en/5/5f/Original_Doge_meme.jpg" alt="dog the dog">
+<img src="costarica.jpg" width="250" height="250">
 	<p>A little about myself,
 	I grew up in Soledad, CA. I graduated from UC Davis with a major in Sociology. I moved to Los Angeles in 2014, and I currently work as a behavior therapist.I decided to enroll in the coding bootcamp because I want to change my career path.
 </p>
